# claude-code-server

./: .gitignore  Makefile  README.md  pyproject.toml
app/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  icons.tsx  index.css  main.tsx
claude_code_server/: __init__.py  agent.py  models.py  router.py  server.py  store.py
claude_code_server/static/: index.html
claude_code_server/static/assets/: index-B-9RCyk1.css  index-BkF1vpUT.css  index-CAmU5dkX.css  index-CF9LE5Tk.js  index-CKllgKvj.css  index-Cq2N9h2f.js  index-CqxZiKWE.js  index-CwEgjlGT.js  index-DCLPlmbH.js  index-hZKOa0tx.js
docs/plans/: 2026-04-04-001-feat-frontend-gap-assessment-plan.md
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.app.config.ts  vite.config.ts
frontend/src/: app.css  env.d.ts  index.ts  main.tsx  types.ts
frontend/src/app/: providers.tsx  queryClient.ts  router.tsx
frontend/src/app/hooks/: api.ts  sessions.ts  useTheme.ts
frontend/src/app/routes/: AppLayout.tsx  ChatPage.tsx  LoginPage.tsx  SettingsPage.tsx
frontend/src/components/: Chat.tsx  ChatInput.tsx  ChatMessages.tsx  Sidebar.tsx  Toast.tsx
frontend/src/hooks/: useChat.ts
frontend/src/store/: chat.ts  toast.ts
scripts/: build_frontend.sh
tests/: test_router_chat_persistence.py  test_router_sessions.py  test_store.py
