[project]
name = "claude-code-server"
version = "0.1.1"
description = "Claude Code CLI wrapped as HTTP SSE server — reusable backend for any project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "chat", "fastapi", "sse", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.urls]
Homepage = "https://github.com/KenyonY/claude-code-server"
Repository = "https://github.com/KenyonY/claude-code-server"

[project.scripts]
claude-code-server = "claude_code_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code_server"]

[tool.hatch.build]
artifacts = ["claude_code_server/static/**"]
